// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nota Renderiza a nota do usuário 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#AAA",
          "fontSize": 38,
          "fontWeight": "200",
        },
        undefined,
      ]
    }
  >
    5
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#AAA",
          "fontSize": 14,
          "fontWeight": "300",
        },
        undefined,
      ]
    }
  >
    Média
  </Text>
</View>
`;

exports[`Nota Renderiza o titulo e no lugar da nota coloca _._ 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#AAA",
          "fontSize": 38,
          "fontWeight": "200",
        },
        undefined,
      ]
    }
  >
    _._
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#AAA",
          "fontSize": 14,
          "fontWeight": "300",
        },
        undefined,
      ]
    }
  >
    AP1
  </Text>
</View>
`;

exports[`Nota Renderiza o titulo e se a nota for null no lugar dela coloca _._ 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#AAA",
          "fontSize": 38,
          "fontWeight": "200",
        },
        undefined,
      ]
    }
  >
    _._
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#AAA",
          "fontSize": 14,
          "fontWeight": "300",
        },
        undefined,
      ]
    }
  >
    Title
  </Text>
</View>
`;
